lab/private-blob/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: private-minio
  labels:
    app: minio
    account: private
    owner: tonyhhyip
spec:
  ports:
  - name: account
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: minio
    account: private
    owner: tonyhhyip
  type: ClusterIP
